# upd-pre-commit

./: .pre-commit-hooks.yaml  Makefile  README.md  mirror.py  pyproject.toml
.github/workflows/: main.yml
