[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "upd-pre-commit"
version = "0.1.2"
description = "Pre-commit hooks for upd, a fast multi-ecosystem dependency updater."
authors = [
    { name = "Ruben J. Jongejan", email = "ruben.jongejan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "upd-cli==0.1.2"
]

[project.urls]
Homepage = "https://github.com/rvben/upd"
Repository = "https://github.com/rvben/upd-pre-commit"

[tool.setuptools]
py-modules = []
